--- a/threejs-exercise/threejs-exercise/wwwroot/css/site.css
+++ b/threejs-exercise/threejs-exercise/wwwroot/css/site.css
@@ -13,6 +13,26 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+.incrementers a {
+    text-decoration: none;
+    border-color: black;
+    border-style: solid;
+    border-width: 3px;
+    color: white;
+
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.reset {
+    background-color: coral;
+}
+
+.edit {
+    background-color: lightseagreen;
 }
